# superintervals

./: .gitattributes  .gitignore  Cargo.toml  README.md  pyproject.cpp  pyproject.toml  setup.py
.github/workflows/: python-package.yml  sync_r.yml  sync_r_package.yml
examples/: bed-intersect-si.rs
matrylist/: matrylist.hpp  matrylist.pxd  matrylist.pyx  matrylistDynamic.hpp
src/: README.md  README_cpp.md  README_rust.md  __init__.py  c_superintervals.h  intervalset.pyx  lib.rs  superintervals.hpp  superintervals.rs  superintervalsE.hpp  superintervalsE.rs
src/superintervals/: README.md  intervalmap.pxd  intervalmap.pyx  intervalset.pxd  intervalset.pyx
src/variants/: superintervals_nd.cpp  superintervals_var.hpp  superintervals_var.rs
superintervals/: __init__.py  intervalset.pxd  intervalset.pyx  superintervals.hpp  superintervals.pxd  superintervals.pyx
test/: Makefile  bench.cpp  benchmark.md  generate_test_intervals.py  run-py-libs.py  run_benchmark_all.sh  set_ops.rs  tests.cpp  tests.py
