[package]
name = "superintervals"
description = "Interval overlap library"
version = "0.3.4"
authors = ["Kez Cleal. <clealk@cardiff.ac.uk>"]
edition = "2021"
repository = "https://github.com/kcleal/superintervals"
homepage = "https://github.com/kcleal/superintervals"
documentation = "https://github.com/kcleal/superintervals"
readme = "README.md"
license-file = "LICENSE"
exclude = [
    "test/*",
    "src/superintervals/*",
    "src/R/*",
    "src/superintervals.egg*",
    ".idea",
    "dist",
    "py*", "setup.py", "*.h", "*.hpp", "MANIFEST.in", ".gitignore"
]

[lib]
path = "src/superintervals.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
aligned-vec = { version = "0.6.4", features = ["serde"] }

[profile.release]
debug = 0
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[features]
nosimd = []

[profile.dev.package."*"]
opt-level = 3 # Compile dependencies with optimizations on even in debug mode.

[profile.no-opt]
inherits = "dev"
opt-level = 0

[profile.profiling]
inherits = "release"
debug = true
strip = false

[dev-dependencies]
rand = "0.8"
fnv = "1.0.7"
libc = "0.2"
clap = { version = "4.3.7", features = ["derive"] }
bincode = "1.3.3"

[[example]]
name = "bed-intersect-si"